--- a/circle.yml
+++ b/circle.yml
@@ -1,3 +1,22 @@
+general:
+  branches:
+    only:
+      - master
+
+machine:
+  timezone:
+    Asia/Tokyo
+  php:
+    version: 7.0.4
+
+dependencies:
+  pre:
+    - sudo pip install awscli
+
+test:
+  override:
+    - exit 0
+
 deployment:
   staging:
     branch: master
