--- a/circle.yml
+++ b/circle.yml
@@ -28,6 +28,6 @@ deployment:
           revision_type: S3
           s3_location:
             bucket: codedeploy-for-aws-study
-            key_pattern: aws-study-kusanagi-{BRANCH}-{SHORT_COMMIT}
+            key_pattern: aws-study-kusanagi-{BRANCH}-{SHORT_COMMIT}.zip
         deployment_group: aws-study-kusanagi-deploygroup
         deployment_config: CodeDeployDefault.OneAtATime
