--- a/circle.yml
+++ b/circle.yml
@@ -35,13 +35,13 @@ deployment:
   staging:
     branch: staging
     codedeploy:
-      aws-study-staticHTML:
+      aws-study-kusanagi:
         application_root: /
         region: us-east-2
         revision_location:
           revision_type: S3
           s3_location:
             bucket: codedeploy-for-aws-study
-            key_pattern: aws-study-staticHTML-{BRANCH}-{SHORT_COMMIT}.zip
-        deployment_group: aws-study-staticHTML-deploygroup
+            key_pattern: aws-study-kusanagi-staging-{BRANCH}-{SHORT_COMMIT}.zip
+        deployment_group: aws-study-kusanagi-staging-deploygroup
         deployment_config: CodeDeployDefault.OneAtATime
