--- a/circle.yml
+++ b/circle.yml
@@ -34,6 +34,8 @@ deployment:
         deployment_config: CodeDeployDefault.OneAtATime
   staging:
     branch: staging
+    commands:
+      - echo 'here is circle.yml' >> ./checker.html
     codedeploy:
       aws-study-staticHTML:
         application_root: /
