--- a/circle.yml
+++ b/circle.yml
@@ -36,14 +36,14 @@ deployment:
     branch: staging
     commands:
       - echo 'here is circle.yml' >> /home/kusanagi/aws-study.ideabb.jp/DocumentRoot/checker2-before.html
-    codedeploy:
-      aws-study-kusanagi:
-        application_root: /
-        region: us-east-2
-        revision_location:
-          revision_type: S3
-          s3_location:
-            bucket: codedeploy-for-aws-study
-            key_pattern: aws-study-kusanagi-staging-{BRANCH}-{SHORT_COMMIT}.zip
-        deployment_group: aws-study-kusanagi-staging-deploygroup
-        deployment_config: CodeDeployDefault.OneAtATime
+    # codedeploy:
+    #   aws-study-kusanagi:
+    #     application_root: /
+    #     region: us-east-2
+    #     revision_location:
+    #       revision_type: S3
+    #       s3_location:
+    #         bucket: codedeploy-for-aws-study
+    #         key_pattern: aws-study-kusanagi-staging-{BRANCH}-{SHORT_COMMIT}.zip
+    #     deployment_group: aws-study-kusanagi-staging-deploygroup
+    #     deployment_config: CodeDeployDefault.OneAtATime
