--- a/circle.yml
+++ b/circle.yml
@@ -3,6 +3,7 @@ general:
     only:
       - master
       - staging
+      - circleci2.0
 
 machine:
   timezone:
@@ -45,5 +46,20 @@ deployment:
           s3_location:
             bucket: codedeploy-for-aws-study
             key_pattern: aws-study-staticHTML-{BRANCH}-{SHORT_COMMIT}.zip
+        deployment_group: aws-study-staticHTML-deploygroup
+        deployment_config: CodeDeployDefault.OneAtATime
+  circleci2.0:
+    branch: circleci2.0
+    commands:
+      - echo 'here is circle.yml' >> ./checker.html
+    codedeploy:
+      aws-study-staticHTML:
+        application_root: /
+        region: us-east-2
+        revision_location:
+          revision_type: S3
+          s3_location:
+            bucket: codedeploy-for-aws-study
+            key_pattern: aws-study-circleci2.0-{BRANCH}-{SHORT_COMMIT}.zip
         deployment_group: aws-study-staticHTML-deploygroup
         deployment_config: CodeDeployDefault.OneAtATime
