--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,8 +37,9 @@ jobs:
       - deploy:
           name: Deploy to EC2
           command: |
-              GITHUB_REPO=`echo $CIRCLE_REPOSITORY_URL | sed -e 's/git@github.com://' `
+              GITHUB_REPO=`echo $CIRCLE_REPOSITORY_URL | sed -e 's/git@github.com://' | sed -e 's/.git$//' `
               aws deploy create-deployment \
                   --application-name aws-study-staticHTML \
                   --github-location repository=${GITHUB_REPO},commitId=${CIRCLE_SHA1} \
-                  --deployment-group-name aws-study-staticHTML-deploygroup
+                  --deployment-group-name aws-study-staticHTML-deploygroup \
+                  --region us-east-2
