--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,4 +46,6 @@ jobs:
                   --application-name StartByCircleCI \
                   --github-location repository=${GITHUB_REPO},commitId=${CIRCLE_SHA1} \
                   --deployment-group-name ${CIRCLE_BRANCH}-group \
-                  --region ap-northeast-1
+                  --region ap-northeast-1 \
+                  --query 'deploymentId' --output text >> DEPLOYMENTID
+              aws deploy wait deployment-successful --deployment-id $DEPLOYMENTID
